# mads_plugin

./: .gitattributes  .gitignore  CMakeLists.txt  MQTT_Conf_Edge.md  RASPBERRY.md  README.md  amwcapture.p12  annotated.html  classDatastore-members.html  classDatastore.html  classFilter-members.html  classFilter.html  classMQTTBridge-members.html  classMQTTBridge.html  classMQTTBridge__inherit__graph.map  classMQTTBridge__inherit__graph.md5  classPluginClassName-members.html  classPluginClassName.html  classPluginClassName__coll__graph.md5  classPluginClassName__inherit__graph.map  classPluginClassName__inherit__graph.md5  classRESTway-members.html  classRESTway.html  classRESTway__coll__graph.map  classRESTway__coll__graph.md5  classRESTway__inherit__graph.md5  classRandom-members.html  classRandom.html  classRandom__coll__graph.map  classRandom__coll__graph.md5  classRandom__inherit__graph.map  classRunningAverage-members.html  classRunningAverage.html  classRunningAverage__coll__graph.map  classRunningAverage__inherit__graph.map  classRunningAverage__inherit__graph.md5  classSerialPort-members.html  classSerialPort.html  classSerialReader-members.html  classSerialReader.html  (+63 more)
.github/workflows/: cmake-multi-platform.yml  doxygen.yml
arduino/mads/: mads.ino
doc/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+8 more)
src/: common.hpp  datastore.hpp  filter.hpp  serialport.cpp  serialport.hpp  sink.hpp  source.hpp
src/main/: load_filter.cpp  load_sink.cpp  load_source.cpp
src/plugin/: CMakeLists.txt  README.md  clock.cpp  echoj.cpp  mqtt.cpp  random.cpp  restway.cpp  restway2.cpp  running_avg.cpp  serial_reader.cpp  spawner.cpp  template_filter.cpp  template_sink.cpp  template_source.cpp  to_console.cpp  twice.cpp  webcam.cpp  worker.cpp
